[package]
name = "derive_debug"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = "1.0.84"
# TODO
